      Patch from Raphael Geissert.  Thanks to Paul Wise for analysis and
      data.  (Partly addresses #298545)
  * checks/shared-libs.desc:
    + [RA] Add references to the UsingSymbolsFiles wiki page in the tags
      requesting generation of a symbols file.
    + [RA] Provide details on how to manually check some of the shared
      library problems that Lintian diagnoses.  (Closes: #513086)

  * lib/Lintian/Output.pm:
    + [ADB] Add a colour for pedantic tags to avoid warnings when colourised
      output is used and make the combination more useful.  Thanks, gregor
      herrmann.  (Closes: #513132)
  * lib/Lintian/Output/LetterQualifier.pm:
    + [ADB] Add support for pedantic tags.

  * reporting/config:
    + [RA] Set a bin directory and disable signature checks by default.
  * reporting/harness
    + [RA] Add the bin directory to the path and create a gpg link to
      /bin/true if signature checks are disabled.  This is a hack to work
      with the etch version of dpkg-source.  In lenny, the --no-check flag
      will be used instead.  Patch from Raphael Geissert.

  * man/lintian.1:
    + [ADB] Fix the spelling of "pedantic".  Thanks, Michal Čihař.
      (Closes: #513083)

  * t/runtests:
    + [RA] Add support for selecting a different test package skeleton.
  * t/templates/pedantic{,.upstream}:
    + [RA] New template that passes all pedantic checks.

 -- Russ Allbery <rra@debian.org>  Sun, 25 Jan 2009 12:51:40 -0800

lintian (2.2.0) unstable; urgency=low

  * Summary of tag changes:
    + Added
      - direct-changes-in-diff-but-no-patch-system (pedantic)
      - no-homepage-field (pedantic)
      - no-upstream-changelog (pedantic)
      - package-depends-on-hardcoded-libc
      - weak-dependency-on-misc-depends

  * checks/*.desc:
    + [RA] Replace `' "balanced" quotes with straight double-quotes.  The
      old style looks strange with modern fonts.  Based on work by Raphael
      Geissert.
  * checks/binaries: