@@ -40,7 +40,7 @@ Portions Copyright (C) 2006 Adeodato Simó
 Portions Copyright (C) 2007-2009 Russ Allbery
 Portions Copyright (C) 2008 Patrick Schoenfeld
 Portions Copyright (C) 2008 Niko Tyni
-Portions Copyright (C) 2008 Raphael Geissert
+Portions Copyright (C) 2008-2009 Raphael Geissert
 Portions Copyright (C) 2008-2009 Adam D. Barratt
 
 This program is free software; you may redistribute it and/or modify
